services and models refactoring