@@ -10,12 +10,14 @@ import org.springframework.stereotype.Service;
 import java.util.List;
 import java.util.Random;
 
+import static kpp.lab.railwaytickets.RailwayTicketsApplication.LOGGER;
+
 @Service
 public class ClientCashDeskServiceImpl implements ClientCashDeskService {
 
-    BaseStartupProperties startupProperties;
-    BaseTrainStation trainStation;
-    Random random = new Random();
+    private final BaseStartupProperties startupProperties;
+    private final BaseTrainStation trainStation;
+    private final Random random = new Random();
 
     public ClientCashDeskServiceImpl(BaseStartupProperties startupProperties, BaseTrainStation trainStation) {
         this.startupProperties = startupProperties;
@@ -27,12 +29,13 @@ public class ClientCashDeskServiceImpl implements ClientCashDeskService {
 
         var clientQueue = cashDesk.getQueue();
         BaseClient client = clientQueue.getFirst();
+
         try {
-            Thread.sleep(getRandomBetween(startupProperties.getMinServiceTime(), startupProperties.getMaxServiceTime())
+            Thread.sleep((long) getRandomBetween(startupProperties.getMinServiceTime(), startupProperties.getMaxServiceTime())
                     * client.getTicketNumber());
-        }
-        catch (InterruptedException e) {
-            e.printStackTrace();
+        } catch (InterruptedException e) {
+            LOGGER.error("Interrupted while processing the order.");
+            Thread.currentThread().interrupt();
         }
 
         clientQueue.removeFirst();
@@ -45,38 +48,38 @@ public class ClientCashDeskServiceImpl implements ClientCashDeskService {
 
 
     @Override
-    public BaseCashDesk chooseCashDesk(BaseClient client) throws Exception {
+    public BaseCashDesk chooseCashDesk(BaseClient client) {
 
         var cashDesks = trainStation.getCashDesks();
 
-        boolean isBackupWorking = cashDesks.stream().filter(e -> e.getIsBroken()).count() > 0;
+        boolean isBackupWorking = cashDesks.stream().anyMatch(BaseCashDesk::getIsBroken);
 
         List<BaseCashDesk> workingCashDesks;
 
         if (isBackupWorking) {
             workingCashDesks = cashDesks.stream().filter(e -> !e.getIsBroken()).toList();
-        }
-        else {
+        } else {
             workingCashDesks = cashDesks.stream().filter(e -> !e.getIsBackup()).toList();
         }
 
         BaseCashDesk chosenCashDesk = CashDeskSelectHelper.selectBestDesk(workingCashDesks, client);
         if (chosenCashDesk == null) {
-            throw new Exception("Cash desk is null.");
+            LOGGER.warn("Cash desk is null.");
         }
 
-        chosenCashDesk.addClientToQueue(client);
+        if (chosenCashDesk != null) chosenCashDesk.addClientToQueue(client);
+
         return chosenCashDesk;
     }
 
     @Override
     public void moveClientsToBackupQueue(BaseCashDesk baseCashDesk) {
-
-        BaseCashDesk backupCashDesk = trainStation.getCashDesks().stream().filter(e -> e.getIsBackup()).toList().get(0);
+        BaseCashDesk backupCashDesk = trainStation.getCashDesks().stream().filter(BaseCashDesk::getIsBackup).toList().getFirst();
         backupCashDesk.getQueue().clear();
         backupCashDesk.getQueue().forEach(e -> baseCashDesk.getQueue().add(e));
         baseCashDesk.getQueue().clear();
     }
+
     @Override
     public void setDeskOutOfOrder(BaseCashDesk cashDesk) {
         cashDesk.setIsBroken(true);
